<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context=".activities.PortraitActivity">

    <HorizontalScrollView
        android:id="@+id/hsvMusicStaff"
        android:layout_width="0dp"
        android:layout_height="118dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_rectangle"
        android:contentDescription="@string/music_staff"
        android:overScrollMode="never"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivMusicStaff"
                android:layout_width="500dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/music_staff"
                android:scaleX="1000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_music_staff" />

            <TextView
                android:id="@+id/tvTimeSignatureNumerator"
                android:layout_width="28dp"
                android:layout_height="46dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/time_signature_font"
                android:text="@string/default_time_signature"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primaryTextColor"
                android:textSize="80dp"
                android:typeface="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/tvTimeSignatureDenominator"
                android:layout_width="28dp"
                android:layout_height="46dp"
                android:layout_marginBottom="17dp"
                android:fontFamily="@font/time_signature_font"
                android:text="@string/default_time_signature"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/primaryTextColor"
                android:textSize="80dp"
                android:typeface="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tvTimeSignatureNumerator"
                tools:ignore="SpUsage" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </HorizontalScrollView>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp2Features"
        android:layout_width="0dp"
        android:layout_height="397dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_rectangle"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hsvMusicStaff"
        app:layout_constraintVertical_bias="0.36">


    </androidx.viewpager2.widget.ViewPager2>

    <ImageView
        android:id="@+id/ivBpmNote"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:contentDescription="@string/quarter_note"
        app:layout_constraintBottom_toBottomOf="@+id/tvBpmText"
        app:layout_constraintEnd_toStartOf="@+id/tvBpmEquals"
        app:srcCompat="@drawable/quarter_note" />

    <TextView
        android:id="@+id/tvBpmEquals"
        android:layout_width="6dp"
        android:layout_height="25dp"
        android:gravity="center"
        android:text="@string/equals_sign"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toBottomOf="@+id/tvBpmText"
        app:layout_constraintEnd_toStartOf="@+id/tvBpmNumber" />

    <TextView
        android:id="@+id/tvBpmNumber"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:gravity="center"
        android:paddingStart="7dp"
        android:paddingEnd="7dp"
        android:text="@string/default_bpm"
        android:textAlignment="center"
        android:textColor="@color/primaryTextColor"
        app:layout_constraintBottom_toBottomOf="@+id/tvBpmText"
        app:layout_constraintEnd_toStartOf="@+id/tvBpmText" />

    <TextView
        android:id="@+id/tvBpmText"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/bpm_text"
        android:textColor="@color/primaryLightColor"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/hsvMusicStaff"
        app:layout_constraintEnd_toEndOf="@+id/hsvMusicStaff"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>